--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <nav class="desktop-nav">
           <a href="index.html" class="nav-link">HOME</a>
           <a href="about.html" class="nav-link">ABOUT US</a>
-          <a href="work.html" class="nav-link">MUSICAL</a>
+          <a href="musical/musical.html" class="nav-link">MUSICAL</a>
           <a href="creative.html" class="nav-link">CREATIVE</a>
           <a href="community.html" class="nav-link">COMMUNITY</a>
         </nav>
@@ -386,15 +386,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
 
     <script src="js/main.js"></script>
-=======
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p>공유해욤~</p>
->>>>>>> 7ca65f95a20b980f525e09fc0cb1cce6c212dee1
+    =======
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+      </head>
+      <body>
+        <p>공유해욤~</p>
+        >>>>>>> 7ca65f95a20b980f525e09fc0cb1cce6c212dee1
+      </body>
+    </html>
   </body>
 </html>
