--- a/musical/musical.html
+++ b/musical/musical.html
@@ -139,33 +139,51 @@
           </div>
           <ul class="list">
             <li>
-              <img src="images/img_sample01.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는1</h3>
             </li>
             <li>
-              <img src="images/img_sample02.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는2</h3>
             </li>
             <li>
-              <img src="images/img_sample03.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는3</h3>
             </li>
             <li>
-              <img src="images/img_sample01.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는4</h3>
             </li>
             <li>
-              <img src="images/img_sample02.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는5</h3>
             </li>
             <li>
-              <img src="images/img_sample03.jpg" />
-              <p>어린이대공원에서 펼쳐지는 마법같은 시간</p>
+              <div class="imgWrap">
+                <div></div>
+                <p class="subtitle">어린이대공원에서 펼쳐지는 마법같은 시간</p>
+                <p class="click">자세히보기 -></p>
+              </div>
               <h3>어린이와 함께하는6</h3>
             </li>
           </ul>
