--- a/musical/musical.html
+++ b/musical/musical.html
@@ -1476,46 +1476,21 @@
     <footer>
       <div class="inner">
         <div class="top">
-          <a href="index.html">
-            <img src="images/logo_wh.png" />
+          <a class="logo" href="index.html">
+            <img src="logo/logo_wh.png" />
           </a>
           <ul class="menu">
             <li>
-              <h4 class="accordion-toggle">
-                <a href="#">ABOUT US</a><span class="indicator">+</span>
-              </h4>
-              <ul>
-                <li>About 제이퍼펫</li>
-              </ul>
+              <a href="#">ABOUT US</a>
             </li>
             <li>
-              <h4 class="accordion-toggle">
-                <a href="#">MUSICAL</a><span class="indicator">+</span>
-              </h4>
-              <ul>
-                <li>작품소개</li>
-                <li>공연사진</li>
-              </ul>
+              <a href="#">MUSICAL</a>
             </li>
             <li>
-              <h4 class="accordion-toggle">
-                <a href="#">CREATIVE</a><span class="indicator">+</span>
-              </h4>
-              <ul>
-                <li>연출</li>
-                <li>인형·무대 제작</li>
-                <li>음향작업</li>
-              </ul>
+              <a href="#">CREATIVE</a>
             </li>
             <li>
-              <h4 class="accordion-toggle">
-                <a href="#">COMMUNITY</a><span class="indicator">+</span>
-              </h4>
-              <ul>
-                <li>뉴스</li>
-                <li>공지사항</li>
-                <li>이벤트</li>
-              </ul>
+              <a href="#">COMMUNITY</a>
             </li>
           </ul>
         </div>
@@ -1547,6 +1522,22 @@
             <span>대표자: 김윤호</span> |
             <span>COPYRIGHT 2018 제이퍼펫 All rights reserved.</span>
           </div>
+        </div>
+
+        <div class="flowerImgWrap flower01">
+          <img src="flowers/flower01.png" />
+        </div>
+        <div class="flowerImgWrap flower02">
+          <img src="flowers/flower02.png" />
+        </div>
+        <div class="flowerImgWrap flower03">
+          <img src="flowers/flower03.png" />
+        </div>
+        <div class="flowerImgWrap flower04">
+          <img src="flowers/flower04.png" />
+        </div>
+        <div class="flowerImgWrap flower05">
+          <img src="flowers/flower04.png" />
         </div>
       </div>
     </footer>
