--- a/about/about.html
+++ b/about/about.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="about.css" />
-    <!-- <script src="js/include.js"></script> -->
-    <link rel="stylesheet" href="sub_visualStyle.css" />
-
     <script src="jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-simplyscroll/2.1.1/jquery.simplyscroll.min.js"></script>
@@ -18,28 +15,9 @@
     />
   </head>
   <body>
-    <!-- <div data-include="components/header.html"></div> -->
-    <div data-include="sub_visual.html"></div>
+    <!-- <div data-include="/sub_visual/sub_visual.html"></div> -->
 
-    <!--visual-->
-    <div id="visual">
-      <div class="inner">
-        <div class="keyword01 keyword">MUSICAL</div>
-        <div class="circle"><h2>이야기로 사람의 마음을 움직이다</h2></div>
-        <div class="keyword02 keyword">JPUPPET</div>
-      </div>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
-    <!--visual END-->
+    <div id="visual"></div>
     <div id="containter">
       <section class="con01">
         <div class="one">
@@ -73,7 +51,7 @@
             <div class="center small move6"></div>
           </div>
         </div>
-        <img src="../assets/images/main-logo.png" alt="" />
+        <img src="img/icon1.png" alt="" />
         <ul>
           <li class="up">
             <h3>Family</h3>
@@ -158,7 +136,7 @@
             <li><p>인형제작</p></li>
             <li><p>음향작업</p></li>
           </ul>
-          <img src="../assets/images/daram_explore.png" alt="" />
+          <img src="img/pic6.png" alt="" />
         </div>
       </section>
 
@@ -167,8 +145,8 @@
         <ul>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -177,8 +155,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -187,8 +165,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -197,8 +175,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -207,8 +185,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -217,8 +195,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="../assets/images/sun.png" alt="" /><img
-                src="../assets/images/moon.png"
+              <img src="img/icon1.png" alt="" /><img
+                src="img/icon1_2.png"
                 alt=""
               />
             </div>
@@ -269,6 +247,5 @@
     </div>
 
     <script src="about.js"></script>
-    <script src="sub_visualCustom.js"></script>
   </body>
 </html>
