--- a/musical/musical.html
+++ b/musical/musical.html
@@ -1472,6 +1472,38 @@
     </div>
     <!--container END-->
 
+    <div id="floating">
+      <div class="top">
+        <div class="topInner">
+          <i class="fa-solid fa-arrow-up"></i>
+          <p>TOP</p>
+        </div>
+      </div>
+      <div class="floatFix">
+        <p>CONTACT</p>
+      </div>
+      <div class="inquery">
+        <i class="fa-solid fa-xmark"></i>
+        <h4>온라인으로 간편하게</h4>
+        <p>제이퍼펫에서 꼼꼼하게 확인하여 개별 연락드립니다.</p>
+        <ul>
+          <li>
+            <span>이름</span
+            ><input type="text" placeholder="성함을 입력해주세요" />
+          </li>
+          <li>
+            <span>연락처</span
+            ><input type="text" placeholder="연락처를 입력해주세요" />
+          </li>
+          <li>
+            <span>문의사항</span
+            ><input type="text" placeholder="문의사항을 입력해주세요" />
+          </li>
+        </ul>
+        <button>문의하기</button>
+      </div>
+    </div>
+
     <!--footer-->
     <footer>
       <div class="inner">
