--- a/musical/musical.html
+++ b/musical/musical.html
@@ -65,7 +65,7 @@
         <div class="inner">
           <ul class="txtList">
             <li class="active">안전</li>
-            <li>환경</li>
+            <li>건강</li>
             <li>전래동화</li>
             <li>건강</li>
             <li>양성평등</li>
@@ -139,8 +139,8 @@
               <p>제이퍼펫의 다양한 공연들을 만나보세요.</p>
             </div>
             <ul class="category">
-              <li class="active">안전</li>
-              <li>환경</li>
+              <li class="active">식습관</li>
+              <li>건강</li>
               <li>전래동화</li>
               <li>건강</li>
               <li>양성평등</li>
@@ -158,7 +158,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는1</h3>
+                  <h3>엘리야와 함께하는 골고루 먹기 대작전</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -168,7 +168,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는2</h3>
+                  <h3>달지 않고 짜지 않게 먹어요</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -178,7 +178,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는3</h3>
+                  <h3>완두와 콩이의 슈퍼푸드</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -188,7 +188,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는4</h3>
+                  <h3>초록별 지구를 지켜라!</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -198,9 +198,9 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는5</h3>
+                  <h3>식품알레르기! 편식이 아니예요!</h3>
                 </li>
-                <li>
+                <!-- <li>
                   <div class="imgWrap">
                     <div></div>
                     <p class="subtitle">
@@ -209,7 +209,7 @@
                     <p class="click">자세히보기 -></p>
                   </div>
                   <h3>어린이와 함께하는6</h3>
-                </li>
+                </li> -->
               </ul>
             </li>
             <li class="listWrap listWrap02">
@@ -222,7 +222,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는1</h3>
+                  <h3>엘리야와 함께하는 손씻기 대작전</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -232,7 +232,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는2</h3>
+                  <h3>치아요정 예방이의 건강 칫솔</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -242,7 +242,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는3</h3>
+                  <h3>어린이 뮤지컬! 뽀드득 뽀드득!</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -252,7 +252,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는4</h3>
+                  <h3>엘리야와 함께하는 금연 대작전</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -262,7 +262,7 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는5</h3>
+                  <h3>담배 노! 술도 노!</h3>
                 </li>
                 <li>
                   <div class="imgWrap">
@@ -272,7 +272,17 @@
                     </p>
                     <p class="click">자세히보기 -></p>
                   </div>
-                  <h3>어린이와 함께하는6</h3>
+                  <h3>네모야 힘을 내!</h3>
+                </li>
+                <li>
+                  <div class="imgWrap">
+                    <div></div>
+                    <p class="subtitle">
+                      어린이대공원에서 펼쳐지는 마법같은 시간
+                    </p>
+                    <p class="click">자세히보기 -></p>
+                  </div>
+                  <h3>아토피 요정의 깨끗한 피부만들기</h3>
                 </li>
               </ul>
             </li>
@@ -546,14 +556,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전1</h3>
+                      <h3>엘리야와 함께하는 골고루 먹기 대작전</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        엘리야와 함께하는 골고루 먹기 대작전" 는 2020년부터
+                        제이퍼펫에서 최초로 기획한 새로운 장르의 뮤지컬로,
+                        연극배우와 캐릭터, 스트릿댄서의 화려한 퍼포먼스가 가미된
+                        편식예방과 손씻기 교육을 위한 가족뮤지컬입니다. 화려한
+                        퍼포먼스와 팝핀, 다양한 효과들로 어린이뿐만 아니라 온
+                        가족이 함께 볼 수 있는 뮤지컬이며, 급식센터 및 보건소
+                        대공연 전용 뮤지컬로 제작하였습니다.
                       </p>
                     </div>
                     <ul>
@@ -571,14 +582,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전2</h3>
+                      <h3>달지 않고 짜지 않게 먹어요</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        제이퍼펫에서 '세계 최초'로 기획한
+                        퍼핀뮤지컬(스트릿댄스+캐릭터+특수효과)로, 스트릿 댄서의
+                        화려한 퍼포먼스, 퍼펫쇼, 특수효과가 결합된 신개념
+                        뮤지컬입니다. 어린이들에게 저염, 저당 식습관의 중요성을
+                        알려주는 뮤지컬로, 착한 마법사 '한나'가 나쁜 마법사
+                        '르사'의 유혹으로부터 '루비'와 어린이들의 건강한
+                        식습관을 지켜내는 이야기입니다.
                       </p>
                     </div>
                     <ul>
@@ -596,14 +608,16 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전3</h3>
+                      <h3>완두와 콩이의 슈퍼푸드</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        편식예방과 올바른 식습관을 알려주는
+                        캐릭터극(뮤지컬)입니다. 우리 몸에 필요한 5대 영양소와
+                        슈퍼푸드에 대해 알려주며, 인스턴트 음식만 좋아하던
+                        '완두'가 '콩이'와 친구들의 도움으로 5대 영양소를
+                        섭취하고 '소금맨'을 물리쳐 건강을 되찾게 되는
+                        이야기입니다. "완두콩이의 슈퍼푸드"는 2018년 하반기부터
+                        급식센터 및 다양한 곳에서 공연하여 호평을 받은
+                        작품입니다.
                       </p>
                     </div>
                     <ul>
@@ -621,14 +635,13 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전4</h3>
+                      <h3>초록별 지구를 지켜라!</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        음식물 쓰레기 줄이기에 관한 캐릭터 뮤지컬입니다. 환경의
+                        소중함과 음식물 쓰레기 줄이는 방법을 재미있게 알려주는
+                        뮤지컬로, 지구를 지키는 마법사 '엘루'와 '유키'가 환경을
+                        오염시키는 나쁜 마법사 '르사'와 대결하며, 어린이들과
+                        함께 초록별 지구를 지키기 위해 노력하는 내용입니다.
                       </p>
                     </div>
                     <ul>
@@ -646,14 +659,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전5</h3>
+                      <h3>식품알레르기! 편식이 아니예요!</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        식품알레르기, 편식이 아니에요!"는 경기도 소재
+                        환경성예방질환센터의 검수를 통해 제작된 공연으로,
+                        식품알레르기에 대한 이해도를 높이고 편식과의 차이에 대해
+                        교육하는 캐릭터공연입니다. 콩 알레르기가 있는 '루나'가
+                        편식으로 오해받지만, 주변의 이해와 도움으로 알레르기는
+                        편식이 아님을 깨닫게 되는 과정을 그렸습니다. 유치원,
+                        어린이집 등에서 인식 개선을 위해 제작되었습니다.
                       </p>
                     </div>
                     <ul>
@@ -668,7 +682,7 @@
                     <img src="images/img_sample01.jpg" />
                   </div>
                 </li>
-                <li class="card">
+                <!-- <li class="card">
                   <div class="left">
                     <div class="top">
                       <h3>엘리야와 함께하는 골고루 먹기 대작전6</h3>
@@ -692,7 +706,7 @@
                   <div class="imgWrap">
                     <img src="images/img_sample01.jpg" />
                   </div>
-                </li>
+                </li> -->
               </ul>
             </li>
             <li class="cardListWrap cardListWrap02">
@@ -700,14 +714,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전1</h3>
+                      <h3>엘리야와 함께하는 손씻기 대작전</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        제이퍼펫에서 최초로 제작한 어린이 퍼핀
+                        뮤지컬(라이브+팝핀+캐릭터) 장르로, 배우의 라이브 진행,
+                        스트릿 댄서의 화려한 퍼포먼스, 특수효과가 결합된 관객
+                        참여형 위생 뮤지컬입니다. 잘 씻지 않는 '루나'가 마법사
+                        '르사'의 마법에 걸려 아프게 되자, '엘리야'와
+                        어린이(관객)들이 함께 손씻기의 중요성을 깨닫는다는
+                        내용입니다.
                       </p>
                     </div>
                     <ul>
@@ -725,14 +740,14 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전2</h3>
+                      <h3>치아요정 예방이의 건강 칫솔</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        올바른 치아 관리에 대해 알려주는 캐릭터극(뮤지컬)입니다.
+                        군것질을 좋아하고 양치질을 싫어하는 '건치'가 치아요정
+                        '예방이'를 만나 올바른 양치질법과 치아 관리법을
+                        배우지만, 나쁜 세균의 공격을 받게 되자 다시금 중요성을
+                        깨닫고 건강한 치아를 되찾는 내용입니다. 본 공연은 보건소
+                        및 급식센터 등에서 활발히 공연 중인 캐릭터 뮤지컬입니다.
                       </p>
                     </div>
                     <ul>
@@ -750,14 +765,14 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전3</h3>
+                      <h3>어린이 뮤지컬! 뽀드득 뽀드득!</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        손씻기를 주제로 어린이들의 건강한 생활 습관을 다루는
+                        캐릭터뮤지컬입니다. (2019년 질병관리본부 전국 순회
+                        뮤지컬 노하우 접목) 씻기 싫어하는 '재희'가
+                        '꼬질꼬질맨'을 만나 위험에 처하지만, '손씻기 요정'과
+                        '미스터 클린'을 만나 올바른 손씻기 6단계와 기침 예절
+                        등을 배워 꼬질꼬질맨을 물리친다는 내용입니다.
                       </p>
                     </div>
                     <ul>
@@ -775,14 +790,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전4</h3>
+                      <h3>엘리야와 함께하는 금연 대작전</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        제이퍼펫에서 최초로 제작한 어린이 퍼핀
+                        뮤지컬(스트릿댄스+캐릭터+특수효과) 장르로, 어린이들에게
+                        담배와 술의 위험성을 알려주는 뮤지컬입니다. 나쁜 마법사
+                        '르사'가 '탱구 아저씨'를 담배와 술에 중독시키자,
+                        '엘리야'와 '올리버'가 어린이(관객)들과 힘을 합쳐
+                        '르사'를 물리치고 금연의 중요성을 깨닫게 하는
+                        내용입니다.
                       </p>
                     </div>
                     <ul>
@@ -800,14 +816,15 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전5</h3>
+                      <h3>담배 노! 술도 노!</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        흡연예방과 술의 위험성에 대해 알려주는
+                        캐릭터극(뮤지컬)입니다. 모범적이던 '탱구 아저씨'가 술과
+                        담배로 건강이 나빠지고 난폭하게 변하자, '보건선생님'과
+                        '제로맨'의 도움으로 이를 극복하고, 어린이들은 간접흡연
+                        등 담배의 해로움을 배우게 됩니다. 본 공연은 보건소 장기
+                        대공연 및 학교, 유치원 찾아가는 공연을 활발히 진행 중인
+                        제이퍼펫뮤지컬의 대표 흡연예방 뮤지컬입니다.
                       </p>
                     </div>
                     <ul>
@@ -825,14 +842,39 @@
                 <li class="card">
                   <div class="left">
                     <div class="top">
-                      <h3>엘리야와 함께하는 골고루 먹기 대작전6</h3>
+                      <h3>네모야 힘을 내!</h3>
                       <p>
-                        “앨리와 함께하는 골고루 먹기 대작전”은 2020년부터
-                        제이퍼펫에서 최초로 기획·제작한 창의 뮤지컬입니다.
-                        창의형 뮤지컬, 연극+뮤지컬 캐릭터, 스토리텔링과 화려한
-                        퍼포먼스가 가미된 퍼포먼스형 뮤지컬로 가족 모두가 함께
-                        즐길 수 있는 공연으로, 클래식 및 보컬을 다룬 대형 창작
-                        뮤지컬로 제작하였습니다.
+                        경기도 소재 환경성예방질환센터의 검수를 통해 제작된
+                        공연으로, 알레르기 비염의 원인, 증상, 예방법을 자세히
+                        알려주는 교육 캐릭터뮤지컬입니다. 알레르기 비염을 앓는
+                        '네모'가 '예방이'를 만나 관리법(손 씻기, 물 마시기 등)을
+                        배우고, '알레르기 대마왕'의 방해를 이겨내며 건강한 삶을
+                        되찾는다는 내용입니다.
+                      </p>
+                    </div>
+                    <ul>
+                      <li>캐릭터뮤지컬팀 300~1500명</li>
+                      <li>캐릭터뮤지컬팀 300~1500명</li>
+                      <li>캐릭터뮤지컬팀 300~1500명</li>
+                      <li>캐릭터뮤지컬팀 300~1500명</li>
+                      <li>캐릭터뮤지컬팀 300~1500명</li>
+                    </ul>
+                  </div>
+                  <div class="imgWrap">
+                    <img src="images/img_sample01.jpg" />
+                  </div>
+                </li>
+                <li class="card">
+                  <div class="left">
+                    <div class="top">
+                      <h3>아토피 요정의 깨끗한 피부만들기</h3>
+                      <p>
+                        아토피 피부염 예방 캐릭터극(뮤지컬)입니다. 아토피
+                        피부염을 예방하는 방법과 좋은 생활 습관(씻기, 보습,
+                        골고루 먹기)을 재미있는 에피소드와 노래로 알려줍니다.
+                        아토피로 힘들어하는 '베베'가 '아토피 대마왕'의 방해를
+                        받지만, '아토피 요정 예방이'의 도움으로 이를 이겨내는
+                        과정을 그립니다.
                       </p>
                     </div>
                     <ul>
