--- a/about/about.html
+++ b/about/about.html
@@ -51,7 +51,7 @@
           <div class="center circle-three">
             <div class="center big move3"></div>
             <div class="values">
-              <div>
+              <div class="active">
                 <p>Family</p>
               </div>
               <div>
@@ -76,7 +76,7 @@
             <h3>Family</h3>
             <div>
               <p>가족이 함께 웃고 감동하는 공연</p>
-              <p class="second">Connetion1</p>
+              <p class="second">Empathy</p>
             </div>
             <div class="line"></div>
             <p>
@@ -88,19 +88,22 @@
             <h3>Creativity</h3>
             <div>
               <p>상상으로 현실을 확장하는 힘</p>
-              <p class="second">Connetion2</p>
+              <p class="second">Imagine</p>
             </div>
             <div class="line"></div>
-            <p>무한한 상상력으로 새로운 공연의 세계를 엽니다.</p>
+            <p>무한한 상상력으로 <br />새로운 공연의 세계를 엽니다.</p>
           </li>
           <li>
             <h3>Learn</h3>
             <div>
               <p>놀이 속에서 배우는 즐거움</p>
-              <p class="second">Connetion3</p>
+              <p class="second">Growth</p>
             </div>
             <div class="line"></div>
-            <p>즐겁게 보고 자연스럽게 배우는 공연을 만듭니다.</p>
+            <p>
+              즐겁게 보고 자연스럽게 배우는<br />
+              공연을 만듭니다.
+            </p>
           </li>
         </ul>
       </section>
