--- a/about/about.html
+++ b/about/about.html
@@ -42,14 +42,20 @@
     <div id="containter">
       <section class="con01">
         <div class="one">
-          <div class="center circle-one">
-            <div class="center big move1"></div>
+          <div class="center orbit circle-one">
+            <div class="wrapper1">
+              <div class="center big move1"></div>
+            </div>
           </div>
-          <div class="center circle-two">
-            <div class="center big move2"></div>
+          <div class="center orbit circle-two">
+            <div class="wrapper2">
+              <div class="center big move2"></div>
+            </div>
           </div>
-          <div class="center circle-three">
-            <div class="center big move3"></div>
+          <div class="center orbit circle-three">
+            <div class="wrapper3">
+              <div class="center big move3"></div>
+            </div>
             <div class="values">
               <div class="active">
                 <p>Family</p>
@@ -60,17 +66,17 @@
               <div><p>Learn</p></div>
             </div>
           </div>
-          <div class="center circle-four">
+          <div class="center orbit circle-four">
             <div class="center small move4"></div>
           </div>
-          <div class="center circle-five">
+          <div class="center orbit circle-five">
             <div class="center small move5"></div>
           </div>
-          <div class="center circle-six">
+          <div class="center orbit circle-six">
             <div class="center small move6"></div>
           </div>
         </div>
-        <img src="img/icon1.png" alt="" />
+        <img src="characterIMG/png/daram_explore.png" alt="" />
         <ul>
           <li class="up">
             <h3>Family</h3>
@@ -165,7 +171,7 @@
             <li><p>인형제작</p></li>
             <li><p>음향작업</p></li>
           </ul>
-          <img src="img/pic6.png" alt="" />
+          <img src="characterIMG/png/daram_bbakkom.png" alt="" />
         </div>
       </section>
 
@@ -174,10 +180,8 @@
         <ul>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/음악감독2.png" alt="" />
+              <img src="characterIMG/team/음악감독_원.png" alt="" />
             </div>
             <h4>김윤호 | 대표 / 음악감독</h4>
             <p>
@@ -187,10 +191,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/연출2.png" alt="" />
+              <img src="characterIMG/team/연출_원.png" alt="" />
             </div>
             <h4>김재민 | 연출</h4>
             <p>
@@ -200,10 +202,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/예술감독2.png" alt="" />
+              <img src="characterIMG/team/예술감독_원.png" alt="" />
             </div>
             <h4>율비 | 예술감독</h4>
             <p>
@@ -213,30 +213,24 @@
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/공연팀장2.png" alt="" />
+              <img src="characterIMG/team/공연팀장_원.png" alt="" />
             </div>
             <h4>이승원 | 공연팀장</h4>
             <p>공연 현장을 총괄·지휘합니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/안무감독2.png" alt="" />
+              <img src="characterIMG/team/안무감독_원.png" alt="" />
             </div>
             <h4>탄탄 | 안무감독</h4>
             <p>움직임과 표현을 통해 무대에 에너지를 만듭니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/실장2.png" alt="" />
+              <img src="characterIMG/team/실장_원.png" alt="" />
             </div>
             <h4>김영일 | 실장</h4>
             <p>
@@ -246,10 +240,8 @@
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/비서2.png" alt="" />
+              <img src="characterIMG/team/비서_원.png" alt="" />
             </div>
             <h4>육희정 | 비서</h4>
             <p>
