--- a/about/about.html
+++ b/about/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="sub_visual/sub_visualStyle.css" />
+
     <script src="jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-simplyscroll/2.1.1/jquery.simplyscroll.min.js"></script>
@@ -17,68 +19,97 @@
   <body>
     <!-- <div data-include="/sub_visual/sub_visual.html"></div> -->
 
-    <div id="visual"></div>
+    <!--visual-->
+    <div id="visual">
+      <div class="inner">
+        <div class="keyword01 keyword">ABOUT</div>
+        <div class="circle"><h2>이야기로 사람의 마음을 움직이다</h2></div>
+        <div class="keyword02 keyword">JPUPPET</div>
+      </div>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <!--visual END-->
+
     <div id="containter">
       <section class="con01">
         <div class="one">
-          <div class="center circle-one">
-            <div class="center big move1"></div>
+          <div class="center orbit circle-one">
+            <div class="wrapper1">
+              <div class="center big move1"></div>
+            </div>
+          </div>
+          <div class="center orbit circle-two">
+            <div class="wrapper2">
+              <div class="center big move2"></div>
+            </div>
+          </div>
+          <div class="center orbit circle-three">
+            <div class="wrapper3">
+              <div class="center big move3"></div>
+            </div>
             <div class="values">
-              <div>
+              <div class="active">
                 <p>Family</p>
               </div>
               <div>
-                <p>Education</p>
+                <p>Creativity</p>
               </div>
-              <div><p>Growth</p></div>
+              <div><p>Learn</p></div>
             </div>
           </div>
-          <div class="center circle-two">
-            <div class="center big move2"></div>
-          </div>
-          <div class="center circle-three">
-            <div class="center big move3"></div>
-          </div>
-        </div>
-        <div class="two">
-          <div class="center circle-four">
+          <div class="center orbit circle-four">
             <div class="center small move4"></div>
           </div>
-          <div class="center circle-five">
+          <div class="center orbit circle-five">
             <div class="center small move5"></div>
           </div>
-          <div class="center circle-six">
+          <div class="center orbit circle-six">
             <div class="center small move6"></div>
           </div>
         </div>
-        <img src="img/icon1.png" alt="" />
+        <img src="characterIMG/png/daram_explore.png" alt="" />
         <ul>
           <li class="up">
             <h3>Family</h3>
             <div>
               <p>가족이 함께 웃고 감동하는 공연</p>
-              <p class="second">Connetion1</p>
+              <p class="second">Empathy</p>
             </div>
             <div class="line"></div>
-            <p>세대를 잇는 이야기로 따뜻한 유대감을 나눕니다.</p>
+            <p>
+              세대를 잇는 이야기로<br />
+              따뜻한 유대감을 나눕니다.
+            </p>
           </li>
           <li>
-            <h3>Education</h3>
+            <h3>Creativity</h3>
             <div>
-              <p>가족이 함께 웃고 감동하는 공연</p>
-              <p class="second">Connetion2</p>
+              <p>상상으로 현실을 확장하는 힘</p>
+              <p class="second">Imagine</p>
             </div>
             <div class="line"></div>
-            <p>세대를 잇는 이야기로 따뜻한 유대감을 나눕니다.</p>
+            <p>무한한 상상력으로 <br />새로운 공연의 세계를 엽니다.</p>
           </li>
           <li>
-            <h3>Growth</h3>
+            <h3>Learn</h3>
             <div>
-              <p>가족이 함께 웃고 감동하는 공연</p>
-              <p class="second">Connetion3</p>
+              <p>놀이 속에서 배우는 즐거움</p>
+              <p class="second">Growth</p>
             </div>
             <div class="line"></div>
-            <p>세대를 잇는 이야기로 따뜻한 유대감을 나눕니다.</p>
+            <p>
+              즐겁게 보고 자연스럽게 배우는<br />
+              공연을 만듭니다.
+            </p>
           </li>
         </ul>
       </section>
@@ -94,39 +125,43 @@
           </ul>
           <ul class="title">
             <li class="look">
-              <h3>연출<br /><span></span></h3>
+              <h3>연출<br /><span>Direction</span></h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Blanditiis laudantium aut molestiae culpa perspiciatis dolorum
-                itaque? Dolore amet, repellat tempore culpa quo obcaecati nisi a
-                perferendis sed molestiae! Qui, officiis!
+                제이퍼펫은 스토리의 본질을 섬세하게 해석하여 배우 무대 관객이
+                하나로 호흡하는 장면을 만듭니다. 리듬과 시선, 감정의 흐름을
+                세심하게 조율하여 무대 위에 생명력을 불어넣고, 관객이 자연스럽게
+                이야기 속으로 스며들 수 있도록 합니다.
               </p>
             </li>
             <li>
               <h3>무대제작<br /><span>Stage Design & Production</span></h3>
               <p>
-                장면의 감정을 시각적으로 완성하는 공간. 제이퍼펫은 공연의
+                <!-- 장면의 감정을 시각적으로 완성하는 공간. 제이퍼펫은 공연의
                 콘셉트와 연출 의도에 맞춘 세밀한 무대 디자인으로 몰입감 있는
                 현장을 구현합니다. 세트, 조명, 소품 등 모든 요소를 유기적으로
-                설계합니다.
+                설계합니다. -->
+                공연의 콘셉트와 연출 의도에 맞춘 세밀한 무대 디자인으로 몰입감
+                있는 현장을 구현합니다. 세트, 조명, 소품 등 모든 요소를
+                유기적으로 설계하여 하나의 예술적 세계를 만들어 장면의 감정을
+                시각적으로 완성합니다.
               </p>
             </li>
             <li>
-              <h3>인형제작<br /><span></span></h3>
+              <h3>인형제작<br /><span>Doll Production</span></h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod
-                incidunt, laudantium a optio nihil cum accusantium mollitia
-                officia. Iste aliquam dolorem unde molestias accusantium culpa
-                ab necessitatibus nihil, libero distinctio!
+                제이퍼펫은 캐릭터의 개성과 움직임을 고려한 정교한 인형 제작으로
+                공연의 완성도를 높입니다. 각 캐릭터의 성격과 움직임을 고려해
+                디자인뿐만 아니라 질감, 색감부터 구조, 마감까지 세심하게
+                설계하여 직접 손으로 완성합니다.
               </p>
             </li>
             <li>
-              <h3>음향작업<br /><span></span></h3>
+              <h3>음향작업<br /><span>Sound Work</span></h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Molestiae, nihil. Possimus, pariatur sint ratione numquam illum
-                laudantium voluptates perspiciatis aut iure ullam debitis. Atque
-                optio reiciendis tempora omnis maxime laudantium!
+                소리는 무대의 공기를 바꾸고, 관객의 마음을 움직이는 또 하나의
+                연출입니다. 제이퍼펫은 각 장면의 분위기와 리듬에 맞춘 사운드
+                디자인으로 감정선을 섬세하게 디자인합니다. 음향 효과, 배경음,
+                대사의 호흡까지 세밀하게 조율하여 몰입의 깊이를 더합니다.
               </p>
             </li>
           </ul>
@@ -136,7 +171,7 @@
             <li><p>인형제작</p></li>
             <li><p>음향작업</p></li>
           </ul>
-          <img src="img/pic6.png" alt="" />
+          <img src="characterIMG/png/daram_bbakkom.png" alt="" />
         </div>
       </section>
 
@@ -145,63 +180,74 @@
         <ul>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/음악감독2.png" alt="" />
+              <img src="characterIMG/team/음악감독_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>김윤호 | 대표 / 음악감독</h4>
+            <p>
+              제이퍼펫의 예술적 비전과 방향을 이끌며 <br />음악으로 공연의
+              완성도를 높입니다.
+            </p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/연출2.png" alt="" />
+              <img src="characterIMG/team/연출_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>김재민 | 연출</h4>
+            <p>
+              이야기와 무대를 통합적으로 관리하여<br />
+              공연의 흐름과 완성도를 책임집니다.
+            </p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/예술감독2.png" alt="" />
+              <img src="characterIMG/team/예술감독_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>율비 | 예술감독</h4>
+            <p>
+              공연의 미학적 방향을 설계하고 <br />
+              제이퍼펫의 예술적 방향을 제시합니다.
+            </p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/공연팀장2.png" alt="" />
+              <img src="characterIMG/team/공연팀장_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>이승원 | 공연팀장</h4>
+            <p>공연 현장을 총괄·지휘합니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/안무감독2.png" alt="" />
+              <img src="characterIMG/team/안무감독_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>탄탄 | 안무감독</h4>
+            <p>움직임과 표현을 통해 무대에 에너지를 만듭니다.</p>
           </li>
           <li>
             <div class="images">
-              <img src="img/icon1.png" alt="" /><img
-                src="img/icon1_2.png"
-                alt=""
-              />
+              <img src="characterIMG/team/실장2.png" alt="" />
+              <img src="characterIMG/team/실장_원.png" alt="" />
             </div>
-            <h4>홍길동 | 연출 / 극작</h4>
-            <p>무대 전체를 아우르는 이야기의 방향을 설계합니다.</p>
+            <h4>김영일 | 실장</h4>
+            <p>
+              무대 뒤의 과정이 매끄럽게 흘러가도록 <br />
+              세심하게 조율합니다.
+            </p>
+          </li>
+          <li>
+            <div class="images">
+              <img src="characterIMG/team/비서2.png" alt="" />
+              <img src="characterIMG/team/비서_원.png" alt="" />
+            </div>
+            <h4>육희정 | 비서</h4>
+            <p>
+              조직의 소통과 운영을 지원하며<br />
+              원활한 업무 진행을 관리합니다.
+            </p>
           </li>
         </ul>
       </section>
@@ -246,6 +292,7 @@
       </div>
     </div>
 
+    <script src="sub_visual/sub_visualCustom.js"></script>
     <script src="about.js"></script>
   </body>
 </html>
